--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
   }
 }
 
-.aaa {
+.dotted {
   background-image: radial-gradient(rgba(0 0 0 / 0.35) 1px, transparent 0);
   background-size: 25px 25px;
 }
