--- a/src/index.css
+++ b/src/index.css
@@ -8,21 +8,25 @@
     -webkit-appearance: none;
     margin: 0;
   }
+
+  input[type="color"] {
+    -webkit-appearance: none;
+    border: none;
+    overflow: hidden;
+  }
+  input[type="color"]::-webkit-color-swatch-wrapper {
+    padding: 0;
+  }
+  input[type="color"]::-webkit-color-swatch {
+    border: none;
+  }
+
+  body {
+    overflow: hidden;
+  }
 }
 
 .dotted {
   background-image: radial-gradient(rgba(0 0 0 / 0.35) 1px, transparent 0);
   background-size: 25px 25px;
-}
-
-input[type="color"] {
-  -webkit-appearance: none;
-  border: none;
-  overflow: hidden;
-}
-input[type="color"]::-webkit-color-swatch-wrapper {
-  padding: 0;
-}
-input[type="color"]::-webkit-color-swatch {
-  border: none;
 }
