--- a/src/index.css
+++ b/src/index.css
@@ -30,3 +30,11 @@
   background-image: radial-gradient(rgba(0 0 0 / 0.35) 1px, transparent 0);
   background-size: 25px 25px;
 }
+
+.dotted-dark {
+  background-image: radial-gradient(
+    rgba(255 255 255 / 0.25) 1px,
+    transparent 0
+  );
+  background-size: 25px 25px;
+}
